enable eureka, add eureka dependency, update validator version, update readme workflow
