# src/main/java/me/sonam/authentication/handler/AuthenticationHandler.java
@@ -3,6 +3,7 @@ package me.sonam.authentication.handler;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.util.Pair;
 import org.springframework.http.MediaType;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
@@ -12,6 +13,9 @@ import org.springframework.web.reactive.function.server.ServerResponse;
 import reactor.core.publisher.Mono;
 
 import java.net.URI;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.Map;
 import java.util.UUID;
 
 @Service
@@ -25,11 +29,12 @@ public class AuthenticationHandler {
         LOG.info("authenticate user");
 
         return authenticationService.authenticate(serverRequest.bodyToMono(AuthenticationPassword.class))
-                .flatMap(s -> ServerResponse.ok().contentType(MediaType.APPLICATION_JSON).bodyValue(s))
+                .flatMap(s -> ServerResponse.ok().contentType(MediaType.APPLICATION_JSON)
+                        .bodyValue(getMap(Pair.of("message", "Authentication successful"))))
                 .onErrorResume(throwable -> {
                     LOG.error("authenticate failed", throwable);
                     return ServerResponse.badRequest().contentType(MediaType.APPLICATION_JSON)
-                            .bodyValue(throwable.getMessage());
+                            .bodyValue(getMap(Pair.of("error", throwable.getMessage())));
                 });
     }
 
@@ -37,11 +42,13 @@ public class AuthenticationHandler {
         LOG.info("create authentication");
 
         return authenticationService.createAuthentication(serverRequest.bodyToMono(AuthTransfer.class))
-                .flatMap(s -> ServerResponse.created(URI.create("/authentications")).contentType(MediaType.APPLICATION_JSON).bodyValue(s))
+                .flatMap(s -> ServerResponse.created(URI.create("/authentications"))
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .bodyValue(getMap(Pair.of("message", "Authentication created successfully for authenticationId: "+s))))
                 .onErrorResume(throwable -> {
                     LOG.error("create authentication failed", throwable);
                     return ServerResponse.badRequest().contentType(MediaType.APPLICATION_JSON)
-                            .bodyValue(throwable.getMessage());
+                            .bodyValue(getMap(Pair.of("error", throwable.getMessage())));
                 });
     }
 
@@ -50,11 +57,9 @@ public class AuthenticationHandler {
         String authenticationId = serverRequest.pathVariable("authenticationId");
 
         return authenticationService.activateAuthentication(authenticationId)
-                .flatMap(s -> ServerResponse.ok().contentType(MediaType.APPLICATION_JSON).bodyValue(s))
-                .onErrorResume(throwable -> {
-                    LOG.error("error on activating authentication", throwable);
-                        return ServerResponse.badRequest().contentType(MediaType.APPLICATION_JSON)
-                                .bodyValue(throwable.getMessage());});
+                .flatMap(s -> ServerResponse.ok().contentType(MediaType.APPLICATION_JSON).bodyValue(getMap(Pair.of("message", s))))
+                .onErrorResume(throwable -> ServerResponse.badRequest().contentType(MediaType.APPLICATION_JSON)
+                                .bodyValue(getMap(Pair.of("error", throwable.getMessage()))));
     }
 
     public Mono<ServerResponse> updatePassword(ServerRequest serverRequest) {
@@ -62,11 +67,11 @@ public class AuthenticationHandler {
         String authenticationId = SecurityContextHolder.getContext().getAuthentication().getPrincipal().toString();
 
         return authenticationService.updatePassword(serverRequest.bodyToMono(String.class), authenticationId)
-                .flatMap(s -> ServerResponse.ok().contentType(MediaType.APPLICATION_JSON).bodyValue(s))
+                .flatMap(s -> ServerResponse.ok().contentType(MediaType.APPLICATION_JSON).bodyValue(getMap(Pair.of("message", s))))
                 .onErrorResume(throwable -> {
                     LOG.error("update password failed", throwable);
                     return ServerResponse.badRequest().contentType(MediaType.APPLICATION_JSON)
-                            .bodyValue(throwable.getMessage());
+                            .bodyValue(getMap(Pair.of("error", throwable.getMessage())));
                 });
     }
 
@@ -76,11 +81,22 @@ public class AuthenticationHandler {
         String authenticationId = SecurityContextHolder.getContext().getAuthentication().getPrincipal().toString();
 
         return authenticationService.delete(authenticationId)
-                .flatMap(s ->  ServerResponse.ok().contentType(MediaType.APPLICATION_JSON).bodyValue(s))
+                .flatMap(s ->  ServerResponse.ok().contentType(MediaType.APPLICATION_JSON).bodyValue(getMap(Pair.of("message", s))))
                 .onErrorResume(throwable -> {
                     LOG.error("delete authentication failed", throwable);
                     return ServerResponse.badRequest().contentType(MediaType.APPLICATION_JSON)
-                            .bodyValue(throwable.getMessage());
+                            .bodyValue(getMap(Pair.of("error", throwable.getMessage())));
                 });
+    }
+
+    private Map<String, String> getMap(Pair<String, String>... pairs){
+
+        Map<String, String> map = new HashMap<>();
+
+        for(Pair<String, String> pair: pairs) {
+            map.put(pair.getFirst(), pair.getSecond());
+        }
+        return map;
+
     }
 }
