# src/main/resources/authentication-rest-service-openapi.yaml
@@ -3,13 +3,14 @@ info:
   title: Authentication Api, authentication-rest-service.
   version: "1.0"
 
-security:
-  - bearerAuth: []
+servers:
+  - url: http://localhost:8083
+    description: local development server
 
 paths:
   /authentications:
     post:
-      description: Create a new authentication.  This api is called when a new user is signed up.
+      description: Create a new authentication.  This api is called when a new user is signed up. No JWT required.
       requestBody:
         required: true
         content:
@@ -24,38 +25,53 @@ paths:
         '201':
           description: Successfully created authentication
           content:
-            text/plain:
+            application/json:
               schema:
-                type: string
+                type: object
+                properties:
+                  message:
+                    type: string
                 example:
-                  text: uuid-value-of-authentication-id
+                  message: Authentication created successfully for authenticationId rubberduck_1001
         '400':
           description: Failed to create authentication
           content:
-            text/plain:
+            application/json:
               schema:
-                type: string
+                type: object
+                properties:
+                  error:
+                    type: string
                 example:
-                  text: some error code
+                  error: Invalid authentication id
     delete:
-      description: Delete authentication associated with the JWT
+      security:
+        - bearerAuth: []
+      description: Delete authentication associated with the JWT.
       responses:
         '200':
           description: Deleted authentication for the user in the JWT
           content:
-            text/plain:
+            application/json:
               schema:
-                type: string
+                type: object
+                properties:
+                  message:
+                    type: string
         '400':
           description: Failed to delete authentication
           content:
-            text/plain:
+            application/json:
               schema:
-                type: string
+                type: object
+                properties:
+                  error:
+                    type: string
 
   /authentications/authenticate:
     post:
-      description: Authenticate user with authenticationId and password.  This will get client role service in the jwt token.  This will return the jwt.
+      description: "Authenticate user with authenticationId and password.  This will get client role service in the 
+                  jwt token.  This will return the jwt."
       requestBody:
         required: true
         content:
@@ -66,18 +82,25 @@ paths:
         '200':
           description: User authenticated successfully
           content:
-             text/plain:
+             application/json:
                schema:
-                 type: string
+                 type: object
+                 properties:
+                   message:
+                     type: string
         '400':
           description: Failed to authenticate user
           content:
-            text/plain:
+            application/json:
               schema:
-                type: string
+                type: object
+                properties:
+                  error:
+                    type: string
   /authentications/activate/{authenticationId}:
     put:
-      description: Set authentication active status to true.  This service will be called from account-rest-service/activate/{authenticationId}
+      description: "Set authentication active status to true.  This service will be called from account-rest-service/activate/{authenticationId}.
+                    This service is called internally, should not be exposed externally.  This does not require a JWT claim".
       parameters:
         - name: authenticationId
           in: path
@@ -85,42 +108,52 @@ paths:
           schema:
             type: string
             format: uuid
-          examples:
-            200_OK
       responses:
         '200':
           description: Successfully activated authenticationId.
           content:
-            text/plain:
+            application/json:
               schema:
-                type: string
+                type: object
+                properties:
+                  message:
+                    type: string
         '400':
           description: Failed to activate authenticationId.
           content:
-            text/plain:
+            application/json:
               schema:
-                type: string
+                type: object
+                properties:
+                  error:
+                    type: string
   /authentications/password:
     put:
-      description: Update authentication password
+      description: Update authentication password. No JWT required
       requestBody:
         content:
-          text/plain:
+          application/json:
             schema:
               type: string
       responses:
         '200':
           description: Successfully updated password
           content:
-            text/plain:
+            application/json:
               schema:
-                type: string
+                type: object
+                properties:
+                  message:
+                    type: string
         '400':
           description: Failed to update password
           content:
-            text/plain:
+            application/json:
              schema:
-               type: string
+               type: object
+               properties:
+                 error:
+                   type: string
 components:
   securitySchemes:
     bearerAuth:
